# todo-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: crud.py  db.py  dependencies.py  deps.py  main.py  models.py  schemas.py  security.py
app/database/: auth.py  category.py  db.py  todo.py  user.py
app/models/: auth.py  category.py  todo.py  user.py
app/routes/: auth.py  category.py  todo.py  user.py
app/schemas/: auth.py  category.py  todo.py  user.py
