[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = "API for managing ToDos"
authors = ["Linus Widing <l.widing@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyJWT = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy = "^2.0.34"
python-dotenv = "^1.0.1"
pydantic = "^2.9.0"
fastapi = {extras = ["standard"], version = "^0.114.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"